Fix title glow/alignment, add DB table slide, fix API animation, tidy end slide, fix Kiro alignment

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 1.15rem;
 }
 
 .slide::-webkit-scrollbar {
