--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 26px;
+}
+
 * {
   margin: 0;
   padding: 0;
